adiciona documentaçao  da rota de remoção de filme
